--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": ">=5.6",
+        "admad/cakephp-jwt-auth": "^2.3",
         "cakedc/cakephp-api": "~6.0",
         "cakephp/cakephp": "~3.6",
         "cakephp/migrations": "^1.8.0",
