--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.6",
         "admad/cakephp-jwt-auth": "^2.3",
         "cakedc/cakephp-api": "~6.0",
-        "cakephp/cakephp": "~3.6",
+        "cakephp/cakephp": "3.6.*",
         "cakephp/migrations": "^1.8.0",
         "cakephp/plugin-installer": "^1.0",
         "josegonzalez/dotenv": "3.*",
